# Chronos

./: .gitignore  CMakeLists.txt  README.md  setup.py  simple_example.py
chronos/: __init__.py  test.py
include/: hmc.h  normal.h
src/: hmc.c  hmc.h  normal.c  normal.h
test/: CMakeLists.txt  include
test/emcee_test/: emcee_test.c  emcee_test.h  emcee_test.py
test/indep_normal/: indep_normal.c  indep_normal.h  indep_normal.py
test/normal/: normal.py
test/recover_params/: recover_params.c  recover_params.h  recover_params.py
